Added more functionality

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
 		<br/>
 
 		<form action="/register" method="get">
-			<input class="btn btn-info btn-block" type="submit" value="Register"/>
+			<input class="btn btn-info btn-block" type="submit" value="First visit? Please register"/>
 		</form>
 		<form action="/search" method="get">
 			<input class="btn btn-info btn-block" type="submit" value ="Badge return/Exit"/>
