--- a/src/main/resources/templates/badgereturn.html
+++ b/src/main/resources/templates/badgereturn.html
@@ -38,9 +38,16 @@
 				
 
 			</table>
-
+<h4 align="center">The information displayed is correct? Please click Logout/Exit button</h4>
 			<input class="btn btn-info btn-block" type="submit"
 				value="Logout/Exit" />
+				
+				<br>
+				
+				<h4 align="center">The information displayed is NOT correct, these aren't your data? Please click Return button</h4>
+			<form action="/index" method="get">
+			<input class="btn btn-danger btn-block btn-sm" onclick="window.location.href = '/index'" value ="Return"/>
+		</form>
 
 		</form>
 	</div>
