--- a/src/main/resources/templates/visitors.html
+++ b/src/main/resources/templates/visitors.html
@@ -20,39 +20,25 @@
 				<table class="table table-striped table-hover">
 					<thead>
 						<tr>
-							<th>Arrival date</th>
-							<th>Arrival time</th>
 							<th>Full name</th>
 							<th>Identity card information</th>
-							<th>Deloitte employee visited</th>
-							<th>Badge number</th>
-							<th>Date of badge receive</th>
-							<th>Date of badge pass/Exit</th>
+							<th>E-mail</th>							
 						</tr>
 					</thead>
 					<tbody>
 						<tr th:each="visitor : ${visitors}">
 							<!-- <td th:text="${visitor.id}"></td> -->
-							<td th:datetime-local="${visitor.arrivalDate}"></td>
-							<td th:datetime-local="${visitor.arrivalTime}"></td>
 							<td th:text="${visitor.fullName}"></td>
 							<td th:text="${visitor.identityCardInfo}"></td>
-							<td>
-								<table>
-									<tr th:each="employee : ${visitor.employee}">
-										<td th:text="${employee.empFullName}"></td>
-									</tr>
-								</table>
-							</td>
-							<td th:text="${visitor.badgeNumber}"></td>
-							<td th:date="${visitor.dateOfBadgeReceive}"></td>
-							<td th:date="${visitor.dateOfExit}"></td>
-
+							<td th:text="${visitor.email}"></td>
 						</tr>
 					</tbody>
 				</table>
 			</div>
 		</div>
+		<form action="/index" method="get">
+			<input class="btn btn-info btn-block" type="submit" value="Return to first page"/>
+		</form>
 	</div>
 </body>
 
