--- a/src/main/resources/static/css/jSignature.css
+++ b/src/main/resources/static/css/jSignature.css
@@ -27,7 +27,7 @@ body {
   font-family: Helvetica, Sans-Serif;
 }
 
-.signature-pad {
+.jSignature {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -48,8 +48,8 @@ body {
   padding: 16px;
 }
 
-.signature-pad::before,
-.signature-pad::after {
+.jSignature::before,
+.jSignature::after {
   position: absolute;
   z-index: -1;
   content: "";
@@ -60,19 +60,19 @@ body {
   box-shadow: 0 8px 12px rgba(0, 0, 0, 0.4);
 }
 
-.signature-pad::before {
+.jSignature::before {
   left: 20px;
   -webkit-transform: skew(-3deg) rotate(-3deg);
           transform: skew(-3deg) rotate(-3deg);
 }
 
-.signature-pad::after {
+.jSignature::after {
   right: 20px;
   -webkit-transform: skew(3deg) rotate(3deg);
           transform: skew(3deg) rotate(3deg);
 }
 
-.signature-pad--body {
+.jSignature--body {
   position: relative;
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -80,7 +80,7 @@ body {
   border: 1px solid #f4f4f4;
 }
 
-.signature-pad--body
+.jSignature--body
 canvas {
   position: absolute;
   left: 0;
@@ -91,14 +91,14 @@ canvas {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.02) inset;
 }
 
-.signature-pad--footer {
+.jSignature--footer {
   color: #C3C3C3;
   text-align: center;
   font-size: 1.2em;
   margin-top: 8px;
 }
 
-.signature-pad--actions {
+.jSignature--actions {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
