--- a/src/main/resources/templates/cannotlogout.html
+++ b/src/main/resources/templates/cannotlogout.html
@@ -13,11 +13,12 @@
 			<img src="logo.png" class="img-responsive left-block" width="100"
 				height="50" alt="Logo" />
 		</div>
-		<h4 align="center">Sorry, but you cannot perform this operation.</h4>
+		<h4 align="center">Something went wrong :( </h4>
 		<h4 align="center">Please check the information you entered.</h4>
 		<form action="/index" method="get">
-			<input class="btn btn-info btn-block" type="submit"
-				value="Return to first page" />
+			<input type="image" src="incorrect.png" class="img-responsive center-block" width="400" height="400" alt="incorrectInfo"/>
+			<!-- <input class="btn btn-info btn-block" type="submit"
+				value="Return to first page" /> -->
 		</form>
 	</div>
 </body>
