--- a/src/main/resources/templates/erroricinfo.html
+++ b/src/main/resources/templates/erroricinfo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Visitors</title>
+<title>Error</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 <link rel="stylesheet" href="/bootstrap.min.css" media="screen" />
@@ -13,11 +13,10 @@
 			<img src="logo.png" class="img-responsive left-block" width="100"
 				height="50" alt="Logo" />
 		</div>
-		<h4 align="center">Sorry, but you cannot login.</h4>
-		<h4 align="center">Please check the information you entered, your identity card / passport information is already register.</h4>
+		<h4 align="center">Something went wrong :( </h4>
+		<h4 align="center">It seems that you are already register. Please check the information you entered or go to Recurring visitor if this isn't your first visit to Deloitte</h4>
 		<form action="/index" method="get">
-			<input class="btn btn-info btn-block" type="submit"
-				value="Return to first page" />
+			<input type="image" src="incorrect.png" class="img-responsive center-block" width="400" height="400" alt="incorrectInfo"/>
 		</form>
 	</div>
 </body>
