--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,34 +8,39 @@
 <link rel="stylesheet" href="/bootstrap.min.css" />
 </head>
 <body>
-<div class="container" style="margin-top: 50px">
+	<div class="container" style="margin-top: 50px">
 
-<div>
-		<img src="logo.png"
-			class="img-responsive left-block" width="100" height="50"
-			alt="Logo" />
-	</div>
+		<div>
+			<img src="logo.png" class="img-responsive left-block" width="100"
+				height="50" alt="Logo" />
+		</div>
 
-		<h3 align="center">Welcome to Deloitte!</h3>
-		<br/>
-		<h4 align="center">Please choose the correct option</h4>
-		<br/>
+		<div>
+			<form action="/register" method="get">
+				<input type="image" src="New.png"
+					class="img-responsive center-block" width="400" height="400"
+					alt="New visitor" />
+			</form>
+		</div>
+		<br />
+		<br />
+		<div>
+			<form action="/search" method="get">
+				<input type="image" src="Recurring.png"
+					class="img-responsive center-block" width="400" height="400"
+					alt="Badge return" style="background-color: black" />
+			</form>
+		</div>
+		<br />
+		<br />
+		<div>
+			<form action="/search2" method="get">
+				<input type="image" src="Second.png"
+					class="img-responsive center-block" width="400" height="400"
+					alt="Recurring visitor" />
+			</form>
+		</div>
 
-		<form action="/register" method="get">
-			<input class="btn btn-info btn-block" type="submit" value="First visit? Please register"/>
-		</form>
-		<form action="/search" method="get">
-			<input class="btn btn-info btn-block" type="submit" value ="Badge return/Exit"/>
-		</form>
-		<form action="/search2" method="get">
-			<input class="btn btn-info btn-block" type="submit" value ="Not the first visit? Please update the information"/>
-		</form>
-	<!-- </div> -->
-	<div>
-		<img src="Leadership_and_people_lo.png"
-			class="img-responsive center-block" width="500" height="500"
-			alt="People" />
-	</div>
 	</div>
 </body>
 </html>
