--- a/src/main/resources/templates/othervisit.html
+++ b/src/main/resources/templates/othervisit.html
@@ -32,9 +32,9 @@ $(document).ready(function() {
 	});
 </script> 
 <script type="text/javascript">
-function inform(){
+/* function inform(){
 	 alert("Enjoy your visit! Please logout when your visit has finished.");
-}
+} */
 </script>
 </head>
 <body>
@@ -98,7 +98,7 @@ function inform(){
 		
 		<h4 align="center">The information displayed is NOT correct, these aren't your data? Please click Return button</h4>
 			<form action="/index" method="get">
-			<input class="btn btn-danger btn-block btn-sm" onclick="window.location.href = '/index'" value ="Return"/>
+			<input class="btn btn-danger btn-block btn-sm" onclick="window.location.href = '/confirm'" value ="Return"/>
 		</form>
 	</div>
 </body>
