--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -19,19 +19,19 @@
 <!-- details: http://www.unbolt.net/jSignature/ -->
 
  <script type="text/javascript">
- $(document).ready(function() {
-	 
-     $("#signature").jSignature({color:"#00f", height: 250, width:600
-    	 });
-   
- 		$('#button').click(function(){
-     	var dataToBeSaved =  $("#signature").jSignature("getData","base30"); 
-     	document.getElementById("signatureValue").value = dataToBeSaved;
- 			    
-  		});
- });
- 
- </script>
+
+		$(document).ready(function() {
+							$("#signature").jSignature({
+								color : "#00f",
+								height : '250',
+								width : '600'
+							});
+							$('#button').click(function() {
+								var dataToBeSaved = $("#signature").jSignature("getData","base30");
+								document.getElementById("signatureValue").value = dataToBeSaved;
+								});
+			});
+	</script>
 
 <script th:inline="javascript">
 
@@ -55,108 +55,108 @@ $(document).ready(function() {
 		});
 	});
 
-function inform(){
-	 alert("Enjoy your visit! Please logout when your visit has finished.");
-}
 
-/* jQuery.validator.setDefaults({
-	  debug: true,
-	  success: "valid"
-	});
-	$( "#myform" ).validate({
-	  rules: {
-	    type: {
-	      required: function(element) {
-	        return $("#badge").val() != null;
-	      }
-	    }
-	  }
-	});
- */
+function checkSubmit() {
+	if (document.getElementById('checkbox').checked == false) {
+		alert ("Please agree to the terms and condition");
+		return false;
+	} else{
+		return true;
+	}
+}
 
 </script> 
 </head>
-<body>
 
+<body>
 	<div class="container" style="height: 370px">
 		<div>
 			<img src="/logo.png" class="img-responsive left-block" width="100"
 				height="50" alt="Logo" />
 		</div>
-		<h3 align="center">Please fill this information in order to register</h3>
+		<img src="Register.png" class="img-responsive center-block"
+			width="200" height="200" alt="registerInfo" />
+		<h2 align="center">Welcome to ERDC!</h2>
+		<br /> <br />
+		<h4 align="center">Please fill this information in order to
+			register</h4>
 		<br />
 
 		<form action="#" th:action="@{/register}" method="post">
 			<table style="margin-left: 45px">
-				
+
 				<tr>
 					<td>Full Name *:</td>
-					<td height="40px"><input type="text" th:field="*{visitor.fullName}"
-						th:value="${visitor.fullName}"  th:name="${fullName}"/>
-						 <input type="hidden" th:field="*{visitor}"
-						th:value="${visitor.id}" th:text="${visitor.id}" th:name="${id}"/></td>
+					<td height="40px"><input type="text"
+						th:field="*{visitor.fullName}" th:value="${visitor.fullName}"
+						th:name="${fullName}" /> <input type="hidden"
+						th:field="*{visitor}" th:value="${visitor.id}"
+						th:text="${visitor.id}" th:name="${id}" /></td>
 					<td th:if="${#fields.hasErrors('visitor.fullName')}"
 						class="help-block" th:errors="*{visitor.fullName}"></td>
 				</tr>
 
 				<tr>
 					<td>Identity card/passport number *:</td>
-					<td height="40px"><input type="text" th:field="*{visitor.identityCardInfo}"
-						th:value="${visitor.identityCardInfo}" th:name="${identityCardInfo}"/></td>
+					<td height="40px"><input type="text"
+						th:field="*{visitor.identityCardInfo}"
+						th:value="${visitor.identityCardInfo}"
+						th:name="${identityCardInfo}" /></td>
 					<td th:if="${#fields.hasErrors('visitor.identityCardInfo')}"
 						class="help-block" th:errors="*{visitor.identityCardInfo}"></td>
 				</tr>
 
 				<tr>
 					<td>E-mail:</td>
-					<td height="40px"><input type="text" th:field="*{visitor.email}"
-						th:value="${visitor.email}" th:name="${email}"/></td>
+					<td height="40px"><input type="text"
+						th:field="*{visitor.email}" th:value="${visitor.email}"
+						th:name="${email}" /></td>
 					<td th:if="${#fields.hasErrors('visitor.email')}"
 						class="help-block" th:errors="*{visitor.email}"></td>
 				</tr>
 				<tr>
 					<td>Deloitte employee visited *:</td>
-					<td height="40px" >
-					<input  type ="text" id="employeeAutocomplete"/>
-					<input type="hidden" id="employee" value="" th:field="*{visit.employee}"/>
-					</td>
-					<td th:if="${#fields.hasErrors('visit.employee')}" class="help-block"
-						th:errors="*{visit.employee}"></td>
+					<td height="40px"><input type="text"
+						id="employeeAutocomplete" /> <input type="hidden" id="employee"
+						value="" th:field="*{visit.employee}" /></td>
+					<td th:if="${#fields.hasErrors('visit.employee')}"
+						class="help-block" th:errors="*{visit.employee}"></td>
 				</tr>
 				<tr>
 					<td>Badge number (if you receive a badge):</td>
-					<td height="40px"><input type="text" th:field="*{visit.badgeNumber}" 
-					th:value="${visit.badgeNumber}" th:name="${badgeNumber}"/>
-					 <input type="hidden" th:field="*{visit}"
-						th:value="${visit.visitId}" th:text="${visit.visitId}" th:name="${visitId}"/></td> 
-					<td th:if="${#fields.hasErrors('visit.badgeNumber')}" class="help-block"
-						th:errors="*{visit.badgeNumber}"></td>
+					<td height="40px"><input type="text"
+						th:field="*{visit.badgeNumber}" th:value="${visit.badgeNumber}"
+						th:name="${badgeNumber}" /> <input type="hidden"
+						th:field="*{visit}" th:value="${visit.visitId}"
+						th:text="${visit.visitId}" th:name="${visitId}" /></td>
+					<td th:if="${#fields.hasErrors('visit.badgeNumber')}"
+						class="help-block" th:errors="*{visit.badgeNumber}"></td>
 				</tr>
-				
+
 				<tr>
-				<td height="40px">BadgeType :</td>
-				<td>
-					<select th:field="${visit.badgeType}">
-					<option value="">Select the badge type</option>
-						<option
-							th:each="badgeType : ${badgeTypes}"
-							th:value="${badgeType}" th:text="${badgeType.displayName}" th:name="${badgeType}" ></option>
-					</select>
-				</td>
+					<td height="40px">BadgeType :</td>
+					<td><select th:field="${visit.badgeType}">
+							<option value="">Select the badge type</option>
+							<option th:each="badgeType : ${badgeTypes}"
+								th:value="${badgeType}" th:text="${badgeType.displayName}"
+								th:name="${badgeType}"></option>
+					</select></td>
 				</tr>
 				<tr>
 					<td>Please sign *:</td>
 
 					<td th:id="signature" class="jSignature" />
-					<td><input type="hidden" id="signatureValue" value="" th:field="*{visitor.signature}" />
-					</td>
+					<td><input type="hidden" id="signatureValue" value=""
+						th:field="*{visitor.signature}" /></td>
 				</tr>
 
 			</table>
-			<input class="btn btn-info btn-block" type="submit" id = "button"
-				value="Save the information" onclick="inform()" />
+			<br /> <input type="checkbox" id="checkbox" /> <a
+				href="/termsAndCondition">I accept the Terms and Condition</a> <br />
+			<input class="btn btn-info btn-block" type="submit" id="button"
+				onclick="return checkSubmit()" value="Submit" />
 		</form>
 	</div>
-	
+
 </body>
 </html>
