--- a/src/main/resources/templates/visits.html
+++ b/src/main/resources/templates/visits.html
@@ -62,8 +62,8 @@
 				</table>
 			</div>
 		</div>
-		<form action="/index" method="get">
-			<input class="btn btn-info btn-block" type="submit" value="Return to first page"/>
+		<form action="/restricted" method="get">
+			<input class="btn btn-info btn-block" type="submit" value="Return to reports"/>
 		</form>
 	</div>
 </body>
